cmake_minimum_required(VERSION 3.9)
project(LeetCodeProblem)
set(CMAKE_CXX_STANDARD 11)
add_executable(RomanToInteger RomanToInteger.cpp)
add_executable(ValidParentheses ValidParentheses.cpp)
add_executable(RemoveDuplicatesfromSortedArray RemoveDuplicatesfromSortedArray.cpp)
add_executable(MergeSortedArray MergeSortedArray.cpp)
add_executable(isSameTree isSameTree.cpp)