cmake_minimum_required(VERSION 3.9)
project(CodePractice)
set(CMAKE_CXX_STANDARD 11)
add_executable(bitOperation bitOperation.cpp)
add_executable(Ch02 rqsCh02.cpp)
add_executable(Ch03 rqsCh03.cpp)
add_executable(Ch04 rqsCh04.cpp)
add_executable(Ch05 rqsCh05.cpp)
add_executable(bilbil_2 bilbil_2.cpp)
add_executable(review review.cpp)