cmake_minimum_required(VERSION 3.9)
project(CodePractice)
set(CMAKE_CXX_STANDARD 11)
add_executable(bitOperation bitOperation.cpp)
add_executable(Ch02 rqsCh02.cpp)
add_executable(Ch03 rqsCh03.cpp)
add_executable(Ch04 rqsCh04.cpp)
add_executable(Ch05 rqsCh05.cpp)
add_executable(Ch06 rqsCh06.cpp)
add_executable(Ch07 rqsCh07.cpp)
add_executable(Ch10 rqsCh10.cpp)
add_executable(bilbil_2 bilbil_2.cpp)
add_executable(review review.cpp)
add_executable(bilbil_3 bilbil_3.cpp)
add_executable(bilbil_4 bilbil_4.cpp)
add_executable(bilibili_5 bilibili_5.cpp)
add_executable(bilibili_6_7 bilibili_6_7.cpp)
add_executable(priority_test priority_test.cpp)