cmake_minimum_required(VERSION 3.9)
project(LeetCodeProblem)
set(CMAKE_CXX_STANDARD 11)
add_executable(RomanToInteger RomanToInteger.cpp)
add_executable(ValidParentheses ValidParentheses.cpp)
add_executable(RemoveDuplicatesfromSortedArray RemoveDuplicatesfromSortedArray.cpp)
add_executable(MergeSortedArray MergeSortedArray.cpp)
add_executable(isSameTree isSameTree.cpp)
add_executable(SymmetricTree SymmetricTree.cpp)
add_executable(MaximumDepthofBinaryTree MaximumDepthofBinaryTree.cpp)
add_executable(BinaryTreeLevelOrderTraversalII BinaryTreeLevelOrderTraversalII.cpp)
add_executable(maxProfit maxProfit.cpp)
add_executable(BestTimetoBuyandSellStockII BestTimetoBuyandSellStockII.cpp)
add_executable(sortedArrayToBST sortedArrayToBST.cpp)
add_executable(ValidPalindrome ValidPalindrome.cpp)
add_executable(SingleNumber SingleNumber.cpp)
add_executable(BalancedBinaryTree BalancedBinaryTree.cpp)
add_executable(MinimumDepthofBinaryTree MinimumDepthofBinaryTree.cpp)
add_executable(PathSum PathSum.cpp )
add_executable(LinkedListCycle LinkedListCycle.cpp)
add_executable(MinStack MinStack.cpp)
add_executable(cpp_study cpp_study.cpp)
add_executable(wordPattern wordPattern.cpp)